# openclaw-console

./: .gitignore  README.md
backend/: Cargo.toml  openclaw-backup-20260301-105620.json  openclaw-backup-20260301-110208.json  openclaw-backup-20260301-110412.json  openclaw-backup-20260301-110519.json  openclaw-backup-20260301-110811.json  openclaw-backup-20260301-121841.json  openclaw_console.db
backend/src/: api.rs  config_reader.rs  db.rs  main.rs  memory.rs
frontend/: .env  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentPanel.tsx  AlertPanel.tsx  BackupPanel.tsx  ConfigPanel.tsx  CronPanel.tsx  GatewayPanel.tsx  HelpPanel.tsx  InstallPanel.tsx  InstancePanel.tsx  LogPanel.tsx  MarketPanel.tsx  MemoryPanel.tsx  ModelPanel.tsx  MonitorPanel.tsx  PlatformPanel.tsx  QuickPanel.tsx  RemotePanel.tsx  SessionPanel.tsx  SkillConfigPanel.tsx  SkillPanel.tsx  StatsPanel.tsx  SystemPanel.tsx  TemplatePanel.tsx  UpdatePanel.tsx  WelcomePanel.tsx
frontend/src/config/: api.ts
frontend/src/i18n/: en.ts  index.ts  zh.ts
frontend/src/pages/: Login.tsx
